src/sass/pages/_home.scss
.logements {
  align-items: center;
  background-color: $greyLight;
  border-radius: 25px;
  display: flex;
  flex-wrap: wrap;
  gap: 40px;
  justify-content: center;
  margin-top: 40px;
  margin-bottom: 50px;
  padding-bottom: 43px;
  padding-top: 56px;

  a {
    color: inherit;
    text-decoration: none;
  }
}

@media (max-width: 767.98px) {
  .logements {
    padding: 0;
    margin-bottom: 27px;
    background-color: white;
  }
}

